--- a/Frontend/.env
+++ b/Frontend/.env
@@ -7,6 +7,7 @@ REACT_APP_COOKIE_NAME=sessionCookie
 REACT_APP_GET_ALL_PRODUCTS=api/products
 REACT_APP_GET_PRODUCT_BY_ID=api/products/
 REACT_APP_CREATE_PRODUCT=api/products/
+REACT_APP_UPDATE_PRODUCT=api/products/
 -------------------Carts Endpoints------------------------------
 REACT_APP_GET_CART=api/carts/
 REACT_APP_ADD_PRODUCT_TO_CART=api/carts/
