--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,12 +19,16 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1",
+    "log4js": "^6.4.6",
     "mongoose": "^6.3.1",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
+    "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.5.0"
+    "socket.io": "^4.5.0",
+    "twilio": "^3.77.0",
+    "yargs": "^17.4.1"
   }
 }
